--- a/index.html
+++ b/index.html
@@ -40,6 +40,18 @@
                 </div>
             </form>
         </div>
+        <div class="task">
+            <div class="kanban-column" id="todo">
+                <h3>ToDo</h3>
+            </div>
+            <div class="kanban-column" id="progress">
+                <h3>Progress</h3>
+
+            </div>
+            <div class="kanban-column" id="done">
+                <h3>Done</h3>
+            </div>
+        </div>
 
     </div>
 
