--- a/WellCome/wellcome.html
+++ b/WellCome/wellcome.html
@@ -9,14 +9,14 @@
 <body>
     <div class="container">
         <div class="wellcome">
-            <h2>Wellome To</h2>
+            <h1>Wellome To</h1>
             <div class="title" >
                 <h1>Task Managment</h1>
                 <h1>Application</h1>
             </div>
         </div>
         <div class="button">
-            <button class="btn">Log In</button>
+            <a href="/LogIn/LogIn.html"><button class="btn"> Log In</button></a>
         </div>
         
     </div>
