--- a/LogIn/LogIn.html
+++ b/LogIn/LogIn.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <div class="title">
-        <h1>Task Managment</h1>
+        <h1>Task Management</h1>
         <h1>Application</h1>
       </div>
       <div class="form">
