--- a/WellCome/wellcome.html
+++ b/WellCome/wellcome.html
@@ -11,7 +11,7 @@
         <div class="wellcome">
             <h1>Wellome To</h1>
             <div class="title" >
-                <h1>Task Managment</h1>
+                <h1>Task Management</h1>
                 <h1>Application</h1>
             </div>
         </div>
