--- a/index.html
+++ b/index.html
@@ -1,115 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
-  </head>
-  <body>
-    <div class="main-conatiner">
-      <div class="heading">
-        <h1>Task Managment System</h1>
-      </div>
-
-      <div class="input-data">
-        <div class="input-grp">
-            <div class="mb-3">
-                <input
-                  type="email"
-                  class="form-control"
-                  id="exampleFormControlInput1"
-                  placeholder="name@example.com"
-                />
-              </div>
-              <div class="mb-3">
-                <textarea
-                  class="form-control"
-                  id="exampleFormControlTextarea1"
-                  rows="5"
-                ></textarea>
-              </div>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Task Management System</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="main-container">
+        <div class="heading">
+            <h1>Task Management System</h1>
         </div>
-
-       <div class="input-status">
-        <div class="badges">
-            <span class="badge rounded-pill text-bg-info">Medium</span>
-            <span class="badge rounded-pill text-bg-danger">High</span>
-            <span class="badge rounded-pill text-bg-success">Low</span>
-        </div>
-        <div class="status">
-            <select>
-                <option value="todo">ToDo</option>
-                <option value="inProgress">In-Progress</option>
-                <option value="done">Done</option>
-            </select>
-        </div>
-       </div>
-        
-      </div>
-
-      <div class="todo-container">
-        <div class="ToDo-container">
-          <div class="head-img">
-            <img src="assets\todo.png" />&nbsp;
-            <h3>ToDo</h3>
-          </div>
-          <div class="card" style="width: 20rem; margin-bottom: 15px">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
+        <div class="input-data">
+            <div class="sub-data">
+                <div class="input-grp">
+                    <div class="mb-3">
+                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Enter Your Task..."
+                        
+                        >
+                    </div>
+                    <div class="mb-3">
+                        <input type="datetime-local" class="form-control" id="exampleFormControlInput2" placeholder="Date">
+                    </div>
+                    <div class="mb-3">
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="5" placeholder="Description"></textarea>
+                    </div>
+                </div>
+                <div class="input-status">
+                    <div class="badges">
+                        <div class="col-md-4">
+                            <label for="inputState" class="form-label">Priority:</label>
+                            <select id="inputState" class="form-select">
+                                <option selected>Choose...</option>
+                                <option>High</option>
+                                <option>Medium</option>
+                                <option>Low</option>
+                            </select>
+                        </div>
+                    </div>
+                    <br>
+                    <button type="button" class="btn btn-light">Add Task</button>
+                </div>
             </div>
-          </div>
         </div>
-
-        <div class="In-Progress-container">
-          <div class="head-img">
-            <img src="assets\progress.webp" />&nbsp;
-            <h3>In-Progress</h3>
-          </div>
-          <div class="card" style="width: 20rem">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
+        <div class="todo-container">
+            <div class="ToDo-container">
+                <div class="head-img">
+                    <img src="assets/todo.png" />&nbsp;
+                    <h3>ToDo</h3>
+                </div>
+                <div class="card" style="width: 20rem; margin-bottom: 15px">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+                <div class="card" style="width: 20rem; margin-bottom: 15px">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+                <div class="card" style="width: 20rem; margin-bottom: 15px">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+                <div class="card" style="width: 20rem; margin-bottom: 15px">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
-
-        <div class="Done-container">
-          <div class="head-img">
-            <img src="assets\done.png" />&nbsp;
-            <h3>Done</h3>
-          </div>
-          <div class="card" style="width: 20rem">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
+            <div class="In-Progress-container">
+                <div class="head-img">
+                    <img src="assets/progress.webp" />&nbsp;
+                    <h3>In-Progress</h3>
+                </div>
+                <div class="card" style="width: 20rem; margin-bottom: 15px">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
             </div>
-          </div>
+            <div class="Done-container">
+                <div class="head-img">
+                    <img src="assets/done.png" />&nbsp;
+                    <h3>Done</h3>
+                </div>
+                <div class="card" style="width: 20rem; margin-bottom: 15px">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+                <div class="card" style="width: 20rem; margin-bottom: 15px">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="script.js"></script>
-  </body>
+</body>
 </html>
