added complete GUI

--- a/LogIn/LogIn.html
+++ b/LogIn/LogIn.html
@@ -24,10 +24,17 @@
                     <label for="password">Enter Password</label>
                     <input type="password" required>
                 </div>
-                <button class="btn"> Log in</button>
+                <button class="btn" id="loginButton"> Log in</button>
             </div>
         </form>
-      </div>
+
     </div>
+    </div>
+
+    <script>
+      document.getElementById("loginButton").addEventListener("click", function() {
+          window.location.href = "D:/Web3gle/ToDo-Application/index.html";
+      });
+  </script>
   </body>
 </html>
