added some changes for vaild input

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 class="form-control task"
                 id="exampleFormControlInput1"
                 placeholder="Enter Your Task..."
+                required
               />
             </div>
             <div class="mb-3">
@@ -32,6 +33,7 @@
                 class="form-control"
                 id="exampleFormControlInput2"
                 placeholder="Date"
+                required
               />
             </div>
             <div class="mb-3">
@@ -40,6 +42,7 @@
                 id="exampleFormControlTextarea1"
                 rows="4"
                 placeholder="Description"
+                required
               ></textarea>
             </div>
           </div>
@@ -73,14 +76,14 @@
           </div>
          
         </div>
-        <div class="ToDo-container">
+        <div class="In-Progress-container">
           <div class="head-img">
             <img src="assets/progress.webp" />&nbsp;
             <h3>In-Progress</h3>
           </div>
           
         </div>
-        <div class="ToDo-container">
+        <div class="Done-container">
           <div class="head-img">
             <img src="assets/done.png" />&nbsp;
             <h3>Done</h3>
