--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <img src="assets/todo.png" />&nbsp;
           <h3>ToDo</h3>
         </div>
-        <div class="consuming-data" id="todo">
+        <div class="column" id="todo">
 
         </div>
 
@@ -65,7 +65,7 @@
           <img src="assets/progress.webp" />&nbsp;
           <h3>In-Progress</h3>
         </div>
-        <div class="in-progress" id="progress">
+        <div class="column" id="progress">
 
         </div>
 
@@ -75,7 +75,7 @@
           <img src="assets/done.png" />&nbsp;
           <h3>Done</h3>
         </div>
-        <div class="done" id="done">
+        <div class="column" id="done">
 
         </div>
 
