added date issue

--- a/TaskManage/index.html
+++ b/TaskManage/index.html
@@ -22,7 +22,7 @@
               required />
           </div>
           <div class="mb-3">
-            <input type="datetime-local" class="form-control" id="exampleFormControlInput2" placeholder="Date"
+            <input type="datetime-local" class="form-control date" id="exampleFormControlInput2" placeholder="Date"
               required />
           </div>
           <div class="mb-3">
