--- a/index.html
+++ b/index.html
@@ -1,24 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="wellcome.css">
-</head>
-<body>
+    <link rel="stylesheet" href="wellcome.css" />
+    <style>
+      @keyframes slideInLeft {
+        0% {
+          transform: translateX(-100%);
+          opacity: 0;
+        }
+        100% {
+          transform: translateX(0);
+          opacity: 1;
+        }
+      }
+
+      @keyframes fadeIn {
+        0% {
+          opacity: 0;
+        }
+        100% {
+          opacity: 1;
+        }
+      }
+
+      @keyframes textAnimation {
+        0% {
+          opacity: 0;
+          transform: translateY(20px);
+        }
+        100% {
+          opacity: 1;
+          transform: translateY(0);
+        }
+      }
+
+      .container {
+        animation: slideInLeft 1s ease-in-out; 
+      }
+
+      .wellcome h1 {
+        animation: textAnimation 1s ease-in-out;
+        animation-delay: 0.3s; 
+      }
+
+      button:hover {
+        transform: scale(1.05);
+        box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
+      }
+
+      button:active {
+        transform: scale(0.95);
+      }
+    </style>
+  </head>
+  <body>
     <div class="container">
-        <div class="wellcome">
-            <h1>Wellome To</h1>
-            <div class="title" >
-                <h1>Task Management</h1>
-                <h1>Application</h1>
-            </div>
+      <div class="wellcome">
+        <h1>Wellome To</h1>
+        <div class="title">
+          <h1>Task Management</h1>
+          <h1>Application</h1>
         </div>
-        <div class="button">
-            <a href="/LogIn/LogIn.html"><button class="btn"> Log In</button></a>
-        </div>
-        
+      </div>
+      <div class="button">
+        <a href="/LogIn/LogIn.html"><button class="btn">Log In</button></a>
+      </div>
     </div>
-</body>
+  </body>
 </html>
