--- a/LogIn/LogIn.html
+++ b/LogIn/LogIn.html
@@ -9,8 +9,11 @@
   <body>
     <div class="container">
       <div class="title">
-        <h1>Task Management</h1>
-        <h1>Application</h1>
+        <!-- <h1>Task Management</h1>
+        <h1>Application</h1> -->
+        <div class="image">
+          <img src="../login1.jpg" alt="">
+        </div>
       </div>
       <div class="form">
         <form id="form">
