--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
       .wellcome h1 {
         animation: textAnimation 1s ease-in-out;
         animation-delay: 0.3s; 
+
       }
 
       button:hover {
@@ -59,14 +60,17 @@
   <body>
     <div class="container">
       <div class="wellcome">
-        <h1>Wellome To</h1>
         <div class="title">
+          <h2>Wellome To</h2>
           <h1>Task Management</h1>
           <h1>Application</h1>
         </div>
+        <div class="button">
+          <a href="/LogIn/LogIn.html"><button class="btn">Log In</button></a>
+        </div>
       </div>
-      <div class="button">
-        <a href="/LogIn/LogIn.html"><button class="btn">Log In</button></a>
+      <div class="pic">
+        <img src="./TaskManage/assets/home.png" alt="">
       </div>
     </div>
   </body>
