--- a/LogIn/LogIn.html
+++ b/LogIn/LogIn.html
@@ -12,7 +12,7 @@
         <!-- <h1>Task Management</h1>
         <h1>Application</h1> -->
         <div class="image">
-          <img src="../login1.jpg" alt="">
+          <img src="../TaskManage/assets/login.png" alt="">
         </div>
       </div>
       <div class="form">
