added changes in ui

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 <body>
 
-  <div class="heading">
+  <!-- <div class="heading">
 
     <div class="project-name">
       <h1>My Project</h1>
@@ -72,7 +72,7 @@
     <div class="contact">
       <p>Get in touch</p>
     </div>
-  </div>
+  </div> -->
     <div class="container">
       <div class="wellcome">
         <div class="title">
