--- a/LogIn/LogIn.html
+++ b/LogIn/LogIn.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="login.css" />
   </head>
   <body>
-    <div class="heading">
+    <!-- <div class="heading">
      
       <div class="project-name">
           <h1>My Project</h1>
       </div>
       <div class="contact">
           <p>Get in touch</p>
-      </div>
+      </div> -->
     </div>
     <div class="container">
       <div class="title">
